# USB-C_PD_PSU

./: .gitmodules  README.md
Firmware/DCDC-Controller/: build.sh
Firmware/DCDC-Controller/app/: CMakeLists.txt  prj.conf  usb_pdmon.overlay
Firmware/DCDC-Controller/app/src/: main.c  main.cpp  power_ctrl.c  util.h
Firmware/HMI-Controller/: platformio.ini
Firmware/HMI-Controller/src/: TFT_eSPI_CH32.hpp  main.ino
Hardware/: .gitignore  CC_Protect.kicad_sch  DCDC.kicad_sch  ER-TFT1.47A1 ST7789 5mm-high bent -1.5mm.step  UI.kicad_sch  USB-C PSU LCSC ToBuy.csv  USB-C PSU.kicad_pcb  USB-C PSU.kicad_pro  USB-C PSU.kicad_sch
Hardware/LCSC.3dshapes/: BUZ-SMD_2P-L4.0-W4.0-H2.0.step  BUZ-SMD_2P-L4.0-W4.0-H2.0.wrl  CONN-SMD_DF40C-20DP-0.4V.step  CONN-SMD_DF40C-20DP-0.4V.wrl  CONN-SMD_DF40HC-3.5-20DS-0.4V-51.step  CONN-SMD_DF40HC-3.5-20DS-0.4V-51.wrl  DSBGA-4_L0.8-W0.8-H0.5-R2-C2-P0.40-BL.step  FPC-SMD_8P-P0.50_HCTL_HC-FPC-05-10-8RLTAG.step  FPC-SMD_8P-P0.50_HCTL_HC-FPC-05-10-8RLTAG.wrl  SW-SMD_4P-L3.0-W2.0-P0.85-LS3.5.step  SW-SMD_SIQ-02FVS3.step  SW-SMD_SIQ-02FVS3.wrl
Hardware/jlcpcb/: project.db
Hardware/jlcpcb/production_files/: BOM-USB-C PSU.csv  CPL-USB-C PSU.csv
